--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
 version: '3.7'
 
 services:
-    nginx:
+    nginx-ssl:
         image: nginx:latest
-        ports:
-            - 8080:80
+        restart: always
         volumes:
             - .:/var/www/html
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-        depends_on:
-          - mysql
-          - php
+            - ./docker/nginx/certs:/etc/nginx/certs
+        ports:
+            - "80:80"
+            - "443:443"
 
     php:
         build: ./docker/php/
-        expose:
-            - 9000
+        restart: always
         volumes:
             - .:/var/www/html
+        environment:
+            - "MYSQL_PORT=3306"
 
     mysql:
         image: mysql:5.6
-        expose:
-            - 3306
+        restart: always
         volumes:
+            - .:/var/www/html
             - ./db:/var/lib/mysql
         environment:
-            MYSQL_ROOT_PASSWORD: secret
-            MYSQL_DATABASE: project
+            - MYSQL_ROOT_PASSWORD=secret
+            - MYSQL_DATABASE=project
+            - MYSQL_USER=test
+            - MYSQL_PASSWORD=test
+        ports:
+            - "3306:3306"
