--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,24 +1,17 @@
 server {
-    # Set the port to listen on and the server name
     listen 80 default_server;
+    listen [::]:80 default_server;
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
     
-    # Set the document root of the project
+    ssl_certificate /etc/nginx/certs/cert.crt;
+    ssl_certificate_key /etc/nginx/certs/cert.key;
     root /var/www/html/www;
-
     index index.php;
-
-    # Specify the default character set
     charset utf-8;
-
-    # Specify the logging configuration
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    sendfile off;
-
-    client_max_body_size 100m;
-
-    # Specify what happens when PHP files are requested
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
@@ -29,5 +22,9 @@ server {
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
+    }
+
+    if ($scheme != "https") { 
+        return 301 https://$host$request_uri;
     }
 }
