--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,32 @@
-version: '3.7'
+version: '3'
 
 services:
     nginx-ssl:
         image: nginx:latest
-        restart: always
         volumes:
-            - .:/var/www/html
+            - ./www:/var/www/html
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - ./docker/nginx/certs:/etc/nginx/certs
+            - ./docker/nginx/certs:/usr/local/share/ca-certificates
+        depends_on:
+            - php
         ports:
-            - "80:80"
-            - "443:443"
+            - "81:80"
+            - "444:443"
 
     php:
         build: ./docker/php/
-        restart: always
         volumes:
-            - .:/var/www/html
+            - ./www:/var/www/html
         environment:
-            - "MYSQL_PORT=3306"
+            - "MYSQL_PORT=3308"
 
     mysql:
         image: mysql:5.6
-        restart: always
         volumes:
             - .:/var/www/html
             - ./db:/var/lib/mysql
         environment:
             - MYSQL_ROOT_PASSWORD=secret
             - MYSQL_DATABASE=project
-            - MYSQL_USER=test
-            - MYSQL_PASSWORD=test
         ports:
-            - "3306:3306"
+            - "3308:3306"
