--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,9 +4,9 @@ server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
     
-    ssl_certificate /etc/nginx/certs/cert.crt;
-    ssl_certificate_key /etc/nginx/certs/cert.key;
-    root /var/www/html/www;
+    ssl_certificate /usr/local/share/ca-certificates/cert.crt;
+    ssl_certificate_key /usr/local/share/ca-certificates/cert.key;
+    root /var/www/html;
     index index.php;
     charset utf-8;
     access_log /var/log/nginx/access.log;
@@ -22,9 +22,5 @@ server {
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
-    }
-
-    if ($scheme != "https") { 
-        return 301 https://$host$request_uri;
     }
 }
